@@ -76,14 +76,14 @@ DIST texlive-module-lib-regex-2007.zip 873 RMD160 1525034c3434b534a238b90730fe56
 DIST texlive-module-lib-zlib-2007.zip 1221 RMD160 c2dc6572cd09ef2494a8b299334b902df6567f4c SHA1 2c2a4814b2eaba74da4ae35521b521f83f688ab8 SHA256 9f9ab01c861946667c218e0e2ebea7bbb74a65e94ce9cb699b99cfd51fbcfd5a
 DIST texlive-module-mft-2007.zip 9083 RMD160 a07d22432636f38a7639a5385ed3e96626041e45 SHA1 fc5585b86daf583779dacc9e25d0e615ba6519e4 SHA256 6d4a52492a03b41fdfc50532a9061ad94723c67ec5ded1d0ea549ee4978511a4
 DIST texlive-module-mkind-english-2007.zip 2264 RMD160 c2d9e9164ed10f55bda56247e94d9bf63adf93e6 SHA1 6660cefd619df95f80f63146f0501cc8dc02e344 SHA256 333fb0b1b4b12764fb16a93ced43721a781202cf0fcb71c5eed4a4903dca5d5c
-EBUILD texlive-core-2007.ebuild 6982 RMD160 acff967027a75af93af4097522a692221ee3ec14 SHA1 f49565ba255e390d7b58102031a8da2f403f449a SHA256 9317833a5d55906d0f06b49f55f58f8bba591d3e01159394190c20b2c2c1252b
-MD5 b7edc8eb816fcb76768417384b2d735f texlive-core-2007.ebuild 6982
-RMD160 acff967027a75af93af4097522a692221ee3ec14 texlive-core-2007.ebuild 6982
-SHA256 9317833a5d55906d0f06b49f55f58f8bba591d3e01159394190c20b2c2c1252b texlive-core-2007.ebuild 6982
-MISC ChangeLog 5403 RMD160 7e6609cd9bbc9b214e1529f4e6c1c2a28b2fbede SHA1 51035d74d4b6abc1e208a0a8234af28ec06251ad SHA256 8973369ff74644134278af67b1c726c6deeeaee36c97d5f8db2a69a95eb5ff0d
-MD5 4a91c32ab9510dd022ac687fbb3e735a ChangeLog 5403
-RMD160 7e6609cd9bbc9b214e1529f4e6c1c2a28b2fbede ChangeLog 5403
-SHA256 8973369ff74644134278af67b1c726c6deeeaee36c97d5f8db2a69a95eb5ff0d ChangeLog 5403
+EBUILD texlive-core-2007.ebuild 6744 RMD160 026eb7b67006a0c1a745a42a992095c15e9f6068 SHA1 06e4387863d703e66ebdf4bdbc2c7babb6c9b09e SHA256 f32ac22411a2fe91b8aeb22754b0b87149f3027ebdad49253e14875c7951e3d1
+MD5 7349b86706779fdb0483dd36a51c0227 texlive-core-2007.ebuild 6744
+RMD160 026eb7b67006a0c1a745a42a992095c15e9f6068 texlive-core-2007.ebuild 6744
+SHA256 f32ac22411a2fe91b8aeb22754b0b87149f3027ebdad49253e14875c7951e3d1 texlive-core-2007.ebuild 6744
+MISC ChangeLog 5523 RMD160 b425a00b960fbfd5457479baafebcc6831f90f81 SHA1 b6f40af31df48e8ee666912239d997e1529f04d9 SHA256 8c2b698e5f6a1126622d84476273448ad0c6399d3d33732c30f14c6c12dfd169
+MD5 e68bd3c95957922de7fb372debb1b6a7 ChangeLog 5523
+RMD160 b425a00b960fbfd5457479baafebcc6831f90f81 ChangeLog 5523
+SHA256 8c2b698e5f6a1126622d84476273448ad0c6399d3d33732c30f14c6c12dfd169 ChangeLog 5523
 MD5 ce038c7eaf6971f7bb7aa8af4e1992eb files/digest-texlive-core-2007 13910
 RMD160 a35861ced4172658b14517c8880d2a193f876372 files/digest-texlive-core-2007 13910
 SHA256 b5566af1308a9159c3e2bf536780a99f874ed08617817776d3a0b89ec93494f2 files/digest-texlive-core-2007 13910
