@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Oct 2007; Alexis Ballier <aballier@gentoo.org>
+  texlive-core-2007.ebuild:
+  do not provide virtual/tetex anymore
+
   08 Oct 2007; Alexis Ballier <aballier@gentoo.org>
   texlive-core-2007.ebuild:
   block vntex
